cubersio/static/less/timer/common.less
@import (reference) "../common.less";

// The fade in/out full-screen wrapper which holds the pop-up
// scramble image preview canvas
#fade-wrapper {
    display: none;
    position: fixed;
    cursor: pointer;
    top: 0;
    left: 0;
    height: 100vh;
    width: 100vw;
    background: rgba(0, 0, 0, 0.95);

    &.shown {
        display: flex !important;
        align-items: center;
        justify-content: center;
    }
}

// The timer itself
#the_timer {
    height: 60%;
    width: 100%;

    font-family: 'Roboto', sans-serif;

    color: white;

    position: relative;
    display: flex;

    &.disabled {
        opacity: 0.40;
    }
}

#the_manual_entry {
    height: 60%;
    width: 100%;

    font-family: 'Roboto', sans-serif;

    color: white;

    position: relative;
    display: flex;

    &.disabled {
        opacity: 0.40;
        pointer-events: none;
    }
}

#the_fmc_entry {
    height: 60%;
    width: 100%;

    font-family: 'Roboto', sans-serif;

    color: white;

    position: relative;
    display: flex;

    &.disabled {
        opacity: 1.0;
        pointer-events: none;
    }
}

#the_mbld_entry {
    height: 60%;
    width: 100%;

    font-family: 'Roboto', sans-serif;

    color: white;

    position: relative;
    display: flex;

    &.disabled {
        opacity: 0.40;
        pointer-events: none;
    }

    #mbldEntryForm, #mbldEntryForm2, #mbldEntryForm3 {
        .form-group {
            margin: 15px;
        }
        margin-bottom: 0;
    }
}

// The visible text inside the timer
.timer_text {
    width: 100%;
    position: absolute;

    user-select: none;

    &.armed {
        color: #363636;
    }

    &.hidden {
        display: none;
    }
}

.timer-container {
    margin-top: @navbar-height;
    height: ~"calc(100% - 48px)"; // 48px is navbar-height, but we can't use a variable in this context
    background-color: @highlight-color;
}

.flex_full_center {
    display: flex;
    align-items: center;
    justify-content: center;
}

// --------------------------------------------------------------------

.scramble_area {
    color: white;
    font-family: 'Roboto', sans-serif;
    font-weight: 400;

    .scram {
        border: 3px solid white;
        padding: 10px;
        height: 100%;
    }

    a {
        color: white;
        font-style: italic;
        text-decoration: underline;

        span {
            color: white !important;
            font-style: italic !important;
        }
    }
}

.scramble_preview {
    cursor: pointer;
    &.no_pointer {
        cursor: default;
    }
    opacity: 1.0;
    transition: opacity .3s ease-in-out;
    &.disabled {
        pointer-events: none;
        opacity: 0.25;
        transition: opacity .3s ease-in-out;
    }
}

.mods_area {
    height: 40%;
    width: 100%;
}

.noselect {
    -webkit-touch-callout: none; /* iOS Safari */
      -webkit-user-select: none; /* Safari */
       -khtml-user-select: none; /* Konqueror HTML */
         -moz-user-select: none; /* Firefox */
          -ms-user-select: none; /* Internet Explorer/Edge */
              user-select: none; /* Non-prefixed version, currently
                                    supported by Chrome and Opera */
}

.controls_wrapper {
    display: flex;
    align-items: center;
    justify-content: center;

    .control_icon {
        transition: all .3s ease-in-out;
    }

    &.disabled {
        .control_icon {
            pointer-events: none;
            transform: scale(0);
            transition: all .3s ease-in-out;
        }
    }
}

.btn-timer-control {
    border-width: 2px;
}

.times {
    width: 100%;
    font-family: 'Roboto Mono', monospace;

    .single_time {
        opacity: 1.0;
        transition: opacity .3s ease-in-out;
    }

    &.disabled {
        .single_time {
            pointer-events: none;
            opacity: 0.25;
            transition: opacity .3s ease-in-out;
        }
    }
}

.single_time {
    text-align: center;

    &.ctx_menu {
        cursor: pointer;
        &:hover {
            border-color: #eeeeee;
        }
    }
}

.event_description {
    cursor: pointer;
    color: white;
    position: absolute;
    bottom: 20px;
    i {
        font-size: 45px;
    }
}

.toggle_wrapper {
    position: fixed;
}

input[type="text"]::-webkit-input-placeholder { /* WebKit browsers */
    color:    #aaaaaa;
}
input[type="text"]:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
    color:    #aaaaaa;
}
input[type="text"]::-moz-placeholder { /* Mozilla Firefox 19+ */
    color:    #aaaaaa;
}
input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
    color:    #aaaaaa;
}

